--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -49,7 +51,7 @@
       <button type="button" class="btn btn-outline-light btn-lg">Download</button>
     </div>
     <div class="col-lg-6 ">
-      <img src="images/iphone6.png" alt="iphone-mockup" class="rotate_image">
+      <img class="rotate_image" src="images/iphone6.png" alt="iphone-mockup" >
     </div>
 </div>
 </div>
@@ -59,15 +61,25 @@
   <!-- Features -->
 
   <section id="features">
+<div class="row">
+    <div class="col-lg-4 col-md-12">
+        <i class="fa fa-check-circle" aria-hidden="true"></i><h3>Easy to use.</h3>
+        <p>So easy to use, even your dog could do it.</p>
+    </div>
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
-
+    <div class="col-lg-4 col-md-12">
+        <i class="fa fa-bullseye" aria-hidden="true"></i>     
     <h3>Elite Clientele</h3>
     <p>We have all the dogs, the greatest dogs.</p>
+    </div>
 
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+    <div class="col-lg-4 col-md-12">
+        <i class="fa fa-heart" aria-hidden="true"></i>
+        <h3>Guaranteed to work.</h3>
+        <p>Find the love of your dog's life or your money back.</p>
+    </div>
+
+</div>
 
   </section>
 
