--- a/index.html
+++ b/index.html
@@ -2,121 +2,131 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>TinDog</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css" />
   <!-- CDN for bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-    crossorigin="anonymous">
-    <!-- font awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 
 <body>
-
   <section id="title">
+    <div class="container-fluid">
+      <!-- Nav Bar -->
 
-<div class="container-fluid">
-    <!-- Nav Bar -->
-
-    <nav class="navbar navbar-expand-lg navbar-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="#">Tindog</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse"
-         data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" 
-         aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
+              <a class="nav-link" href="#">Contact</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Download</a>
-              </li>
+              <a class="nav-link" href="#">Download</a>
+            </li>
           </ul>
         </div>
       </nav>
 
-
-    <!-- Title -->
-<div class="row">
-    <div class="col-lg-6" >
-      <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button" class="btn btn-dark btn-lg">Download</button>
-      <button type="button" class="btn btn-outline-light btn-lg">Download</button>
+      <!-- Title -->
+      <div class="row">
+        <div class="col-lg-6">
+          <h1>Meet new and interesting dogs nearby.</h1>
+          <button type="button" class="btn btn-dark btn-lg">Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg">
+            Download
+          </button>
+        </div>
+        <div class="col-lg-6">
+          <img class="rotate_image" src="images/iphone6.png" alt="iphone-mockup" />
+        </div>
+      </div>
     </div>
-    <div class="col-lg-6 ">
-      <img class="rotate_image" src="images/iphone6.png" alt="iphone-mockup" >
-    </div>
-</div>
-</div>
   </section>
-
 
   <!-- Features -->
 
   <section id="features">
-<div class="row">
-    <div class="col-lg-4 col-md-12">
-        <i class="fa fa-check-circle" aria-hidden="true"></i><h3>Easy to use.</h3>
+    <div class="row">
+      <div class="col-lg-4 col-md-12">
+        <i class="fa fa-check-circle fa-3x" aria-hidden="true"></i>
+        <h3>Easy to use.</h3>
         <p>So easy to use, even your dog could do it.</p>
-    </div>
+      </div>
 
-    <div class="col-lg-4 col-md-12">
-        <i class="fa fa-bullseye" aria-hidden="true"></i>     
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
-    </div>
+      <div class="col-lg-4 col-md-12">
+        <i class="fa fa-bullseye fa-4x" aria-hidden="true"></i>
+        <h3>Elite Clientele</h3>
+        <p>We have all the dogs, the greatest dogs.</p>
+      </div>
 
-    <div class="col-lg-4 col-md-12">
-        <i class="fa fa-heart" aria-hidden="true"></i>
+      <div class="col-lg-4 col-md-12">
+        <i class="fa fa-heart fa-3x" aria-hidden="true"></i>
         <h3>Guaranteed to work.</h3>
         <p>Find the love of your dog's life or your money back.</p>
+      </div>
     </div>
-
-</div>
-
   </section>
-
 
   <!-- Testimonials -->
 
   <section id="testimonials">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="false">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h2 class="testimonial-text">
+            My dog used to be so lonely, but with TinDog's help, they've found
+            the love of their life. I think.
+          </h2>
+          <img class="testimonials-image" src="images/lady-img.jpg" alt="lady-profile" />
+          <em>Beverly, Illinois</em>
+        </div>
+        <div class="carousel-item">
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
+          <h2>
+            I no longer have to sniff other dogs for love. I've found the hottest
+            Corgi on TinDog. Woof.
+          </h2>
+          <img src="images/dog-img.jpg" alt="dog-profile" class="testimonials-image" />
+          <em>Pebbles, New York</em>
+        </div>
 
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
-
+        <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
   </section>
-
 
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
-
+    <img class="press-image" src="images/techcrunch.png" alt="tc-logo" />
+    <img class="press-image" src="images/tnw.png" alt="tnw-logo" />
+    <img class="press-image" src="images/bizinsider.png" alt="biz-insider-logo" />
+    <img class="press-image" src="images/mashable.png" alt="mashable-logo" />
   </section>
-
 
   <!-- Pricing -->
 
   <section id="pricing">
-
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
-
 
     <h3>Chihuahua</h3>
     <h2>Free</h2>
@@ -125,14 +135,12 @@
     <p>Unlimited App Usage</p>
     <button type="button">Sign Up</button>
 
-
     <h3>Labrador</h3>
     <h2>$49 / mo</h2>
     <p>Unlimited Matches</p>
     <p>Unlimited Messages</p>
     <p>Unlimited App Usage</p>
     <button type="button">Sign Up</button>
-
 
     <h3>Mastiff</h3>
     <h2>$99 / mo</h2>
@@ -141,32 +149,31 @@
     <p>Unlimited Messages</p>
     <p>Unlimited App Usage</p>
     <button type="button">Sign Up</button>
-
   </section>
-
 
   <!-- Call to Action -->
 
   <section id="cta">
-
     <h3>Find the True Love of Your Dog's Life Today.</h3>
     <button type="button">Download</button>
     <button type="button">Download</button>
-
   </section>
-
 
   <!-- Footer -->
 
   <footer id="footer">
-
     <p>© Copyright TinDog</p>
-
   </footer>
- <!-- CDN for JQuery and Bootstrap javascript -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <!-- CDN for JQuery and Bootstrap javascript -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
